--- a/index.html
+++ b/index.html
@@ -5,25 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maracatu Renascente</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pre.css">
 </head>
 <body>
-    <div id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-    <nav>
-    </nav>
     <header>
-        <h1 class="animate-red" id="maracatu">
-            <span>M</span><span>A</span><span>R</span>ACATU
-        </h1>
-        <h1 class="animate-blue" id="renascente">
-            <span>R</span><span>E</span><span>N</span><span>A</span><span>S</span><span>C</span><span>E</span><span>N</span>TE
-        </h1>
-        <img id="logo" src="MaRe-Logo-farbe_ohne_schrift.png"/>
+        <img id="logo" src="MaReLogo.png"/>
+        <div id="coming-soon">
+            <h2>Homepage coming soon!</h2>
+            <nav>
+                <a href="#contact">Contact & Booking</a>
+                <a href="#concerts">Concerts</a>
+                <a href="#band">We are</a>
+                <a href="#impressum">Impressum</a>
+            </nav>
+        </div>
     </header>
+    <main>
+        <h1 id="contact">Contact & Booking</h1>
+        <a href="mailto:maracatu.renascente@gmail.com">maracatu.renascente@gmail.com</a>
+        <p>   
+            We are looking for new players. If you are interested, feel free to contact us!
+        </p>
+        <div id="gigs">
+            <h1 id="concerts">Upcoming Conerts</h1>
+            <h3>05.08.23</h3>
+            <h2>Brasil Fest BRNO, Czech Republic</h2>
+            
+        </div>
+        <h1 id="band">We are <span class="blue">M</span>a<span class="red">R</span>e</h1>
+        <p>(Maracatu Renascente) performs brazilian Maracatu. We present traditional Maracatu Toadas as well as other brazilian styles like Coco, Afoxé, Ciranda, Mangue Beat and more. Our self-composed songs as well as live improvisations complete the program.</p>
+        <p>
+            The traditional afro-brazilian music form Maracatu de Baque Virado comes from the state of Pernambuco in the northeast of Brazil. Born on the streets of carnival, it is played with Alfaias, large bass drums made of wood. In Maracatu, polyphonic singing meets rousing drum rhythms.
+        </p>
+        <p>
+            We regularly play at street & district festivals as well as sporting events all over Austria and are also present on various stages and festivals. Our performance ranges from parades and outdoor performances without technical requirements to stage programs with polyphonic singing.
+        </p>
+        <h1 id="impressum">Verantwortlich für die Seite</h1>
+        <p>
+            Maracatu Renascente Kulturverein für Perkussions-Musik <br>
+            Osterleingasse 14/29<br>
+            1150 Wien<br>
+            ZVR: 1942158439<br>
+            maracatu.renascente(at)gmail.com
+        </p>
+    </main>
     
 </body>
 </html>
